samples/_failures_safe/1761212552_8cecad_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b0f85ade.c: In function ‘freeGraph’:
./samples/SAFE/__tmp_b0f85ade.c:185:5: error: expected expression at end of input
  185 |     if (!
      |     ^~
./samples/SAFE/__tmp_b0f85ade.c:185:5: error: expected declaration or statement at end of input
